--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rattsagt-dashboard",
+  "name": "dashboard",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
-    "next": "^13.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "next-auth": "^4.0.0"
   }
 }
